# RandomStuff

./: alinik.xls  analysis_jetbrains_project.py  ffmpeg4webm  ffmpegtrimlossless  get_num_status  main.py  moodle-userscript.js  musicdownload  sql_as_root  starxephyr
CodT/CMLucru/: CMakeLists.txt  main.cpp
CodT/MKLucru/: Makefile  main  main.cpp
CodT/MLucru/: main.cpp  meson.build
CodT/PLucru/: archivefilefilter.ui  handlers.py  installdialog.py  main.py  themecontext.py  ui.glade
CodT/PyLucru/: minia.py
CodT/VLucru/src/: main.vala
CodT/VSCLucru/: main  main.cpp  taietura.in
GIS/: get-data.py  gvotcsvread.py  prelucrate-data.py  proroj.qgz  qgis-import.py  ro-comune-simplificate.dbf  ro-comune-simplificate.shp  ro-comune-simplificate.shx  ro-judete-simplificate.dbf  ro-judete-simplificate.shp  ro-judete-simplificate.shx  ro_judete_poligon.dbf  ro_judete_poligon.qpj  ro_uat_poligon.dbf  ro_uat_poligon.qpj  votcsvread.py
texlucru/: DocAtestat.tex  bio.tex  coverletter.tex  examenM1.tex  fiz.tex  prezentare.tex  realcoverletter.tex  resume.tex  scrisoareintentie.tex  te.tex  writing.tex
